# darts

./: .gitignore  README.md  pyproject.toml  setup.py
data/resources/: resources.gresource.xml
data/resources/ui/: darts_board.ui  game_view.ui
src/darts/: app.py
src/darts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/darts/gui/: darts_board.py  game_view.py  round_renderer.py  score_area.py
src/darts/model/: checkouts.py
